--- a/yabai/.skhdrc
+++ b/yabai/.skhdrc
@@ -138,9 +138,8 @@
 # toggle window split type
 # alt - e : yabai -m window --toggle split
 
-# float / unfloat window and center on screen
-alt - t : yabai -m window --toggle float;\
-          yabai -m window --grid 4:4:1:1:2:2
+# float / unfloat window
+alt - t : yabai -m window --toggle float
 
 # toggle sticky(+float), topmost, picture-in-picture
 # alt - p : yabai -m window --toggle sticky;\
