--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -57,10 +57,10 @@ yabai -m config left_padding                 12
 yabai -m config right_padding                12
 yabai -m config window_gap                   06
 
-# Video recording
+# # Video recording
 # yabai -m config left_padding                 1524
 # yabai -m config bottom_padding              344
-# yabai -m rule --add manage=off app='^.*Zoom.*$'
+# # yabai -m rule --add manage=off app='^.*Zoom.*$'
 # yabai -m rule --add manage=off app='^.*Webcam Settings Panel.*$'
 # yabai -m rule --add manage=off app='^.*OBS.*$'
 # yabai -m rule --add manage=off app='^.*Doom Like Engine.*$'
