--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -18,51 +18,85 @@ sudo yabai --load-sa
 yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 
 
-# global settings
-yabai -m config mouse_follows_focus          off
-yabai -m config focus_follows_mouse          off
-yabai -m config window_origin_display        default
-yabai -m config window_placement             second_child
-yabai -m config window_topmost               off
-yabai -m config window_shadow                off
-yabai -m config window_opacity               off
-yabai -m config window_opacity_duration      0.0
-yabai -m config active_window_opacity        1.0
-yabai -m config normal_window_opacity        0.9
-yabai -m config window_border                on
-yabai -m config window_border_width          4
-# Draw border in high resolution mode; for High Dots Per Inch ("Retina")
-# displays. HiDPI uses significantly more memory.
-#yabai -m config window_border_hidpi true
-# Blur border allowing it to act as a backdrop for transparent windows.
-yabai -m config window_border_blur false
-# Radius of window border.
-# yabai -m config window_border_radius 2
-yabai -m config active_window_border_color   0xffFFBF29
-yabai -m config normal_window_border_color   0xaaE4E4E4
-yabai -m config insert_feedback_color        0xffd75f5f
-yabai -m config split_ratio                  0.50
-yabai -m config auto_balance                 off
-yabai -m config mouse_modifier               fn
-yabai -m config mouse_action1                move
-yabai -m config mouse_action2                resize
-yabai -m config mouse_drop_action            swap
+# # global settings
+# yabai -m config mouse_follows_focus          off
+# yabai -m config focus_follows_mouse          off
+# yabai -m config window_origin_display        default
+# yabai -m config window_placement             second_child
+# yabai -m config window_topmost               off
+# yabai -m config window_shadow                off
+# yabai -m config window_opacity               off
+# yabai -m config window_opacity_duration      0.0
+# yabai -m config active_window_opacity        1.0
+# yabai -m config normal_window_opacity        0.9
+# yabai -m config window_border                on
+# yabai -m config window_border_width          4
+# # Draw border in high resolution mode; for High Dots Per Inch ("Retina")
+# # displays. HiDPI uses significantly more memory.
+# #yabai -m config window_border_hidpi true
+# # Blur border allowing it to act as a backdrop for transparent windows.
+# yabai -m config window_border_blur false
+# # Radius of window border.
+# # yabai -m config window_border_radius 2
+# yabai -m config active_window_border_color   0xffFFBF29
+# yabai -m config normal_window_border_color   0xaaE4E4E4
+# yabai -m config insert_feedback_color        0xffd75f5f
+# yabai -m config split_ratio                  0.50
+# yabai -m config auto_balance                 off
+# yabai -m config mouse_modifier               fn
+# yabai -m config mouse_action1                move
+# yabai -m config mouse_action2                resize
+# yabai -m config mouse_drop_action            swap
+# 
+# # general space settings
+# yabai -m config layout                       bsp
+# yabai -m config top_padding                  12
+# yabai -m config bottom_padding               12
+# # yabai -m config bottom_padding               80
+# yabai -m config left_padding                 12
+# yabai -m config right_padding                12
+# yabai -m config window_gap                   06
+# 
+# # # Video recording
+# # yabai -m config left_padding                 1524
+# # yabai -m config bottom_padding              344
+# # # yabai -m rule --add manage=off app='^.*Zoom.*$'
+# # yabai -m rule --add manage=off app='^.*Webcam Settings Panel.*$'
+# # yabai -m rule --add manage=off app='^.*OBS.*$'
+# # yabai -m rule --add manage=off app='^.*Doom Like Engine.*$'
 
-# general space settings
-yabai -m config layout                       bsp
-yabai -m config top_padding                  12
-yabai -m config bottom_padding               12
-# yabai -m config bottom_padding               80
-yabai -m config left_padding                 12
-yabai -m config right_padding                12
-yabai -m config window_gap                   06
-
-# # Video recording
-# yabai -m config left_padding                 1524
-# yabai -m config bottom_padding              344
-# # yabai -m rule --add manage=off app='^.*Zoom.*$'
-# yabai -m rule --add manage=off app='^.*Webcam Settings Panel.*$'
-# yabai -m rule --add manage=off app='^.*OBS.*$'
-# yabai -m rule --add manage=off app='^.*Doom Like Engine.*$'
+yabai -m config                                 \
+    mouse_follows_focus          off            \
+    focus_follows_mouse          off            \
+    window_origin_display        default        \
+    window_placement             second_child   \
+    window_topmost               off            \
+    window_shadow                off            \
+    window_animation_duration    0.0            \
+    window_opacity_duration      0.0            \
+    active_window_opacity        1.0            \
+    normal_window_opacity        0.90           \
+    window_opacity               off            \
+    active_window_border_color   0xffFFBF29     \
+    normal_window_border_color   0xaaE4E4E4     \
+    insert_feedback_color        0xffd75f5f     \
+    window_border_width          4              \
+    window_border_radius         12             \
+    window_border_blur           off            \
+    window_border_hidpi          on             \
+    window_border                on             \
+    split_ratio                  0.50           \
+    split_type                   auto           \
+    auto_balance                 off            \
+    top_padding                  12             \
+    bottom_padding               12             \
+    left_padding                 12             \
+    right_padding                12             \
+    window_gap                   06             \
+    layout                       bsp            \
+    mouse_modifier               fn             \
+    mouse_action1                move           \
+    mouse_action2                resize         \
+    mouse_drop_action            swap
 
 echo "yabai configuration loaded.."
