Move tmux bar to the bottom and change alacritty padding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,7 +15,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Move status bar to the top
-set-option -g status-position top
+#set-option -g status-position top
 
 # Turn the mouse on
 set -g mouse on
@@ -42,8 +42,6 @@ bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
-
-
 bind-key v copy-mode
 
 
