Allow reordering of panes using <leader>,ß
The ß is the key right to the zero on a german keyboard

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,6 +44,9 @@ bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key v copy-mode
 
+# Allow for pane renumbering
+bind-key ß move-window -r
+
 
 
 #############
