--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -30,7 +30,5 @@ bindings = [
 # Using tmux instead
 history = 0
 
-[shell]
-program = "/usr/local/bin/tmux"
-# Use only one shared session
-#args = ["new-session", "-A", "-D", "-s", "main"]
+[env]
+ENABLE_TMUX_STARTUP="true"
