Open new tmux panes within the same directory as their parent

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,6 +47,11 @@ bind-key v copy-mode
 # Allow for pane renumbering
 bind-key ß move-window -r
 
+# Open new panes in the current working directory
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 
 
 #############
