--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,4 +1,4 @@
-# import = ["~/.config/alacritty/themes/solarized_light.toml"]
+# AUTO CHANGE MARKER: LIGHT/DARK
 import = ["~/.config/alacritty/themes/gruvbox_material_medium_dark.toml"]
 [font]
 size = 14
