Hopefully fixed intermittent clipboard copy problems

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,10 +36,16 @@ bind C-a send-prefix
 set -g set-titles on
 set -g set-titles-string "#T"
 
+# Use tmux internal clipboard, otherwise pbcopy calls seem to crash randomly.
+# However as we are using pbcopy directly for transfer there should be no real
+# downside
+set -s set-clipboard off
+
 # Make copy mode more "vim-like" (pbcopy is mac specific)
 setw -g mode-keys vi
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi enter send-keys -X copy-pipe-and-cancel "pbcopy"
 bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key v copy-mode
