Made tmux terminal colors to be really truecolor in WezTerm

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 # Enable RGB colour if running in alacritty(1)
 #set -g default-terminal "tmux-256color"
-set-option -sa terminal-overrides ",alacritty*:RGB"
+# set-option -a terminal-features 'xterm-256color:RGB'
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set-option -sa terminal-overrides ",alacritty*:RGB"
 
 # Change the prefix key to C-a
 set -g prefix C-a
