--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,9 @@
-# Enable RGB colour if running in alacritty(1)
-#set -g default-terminal "tmux-256color"
-# set-option -a terminal-features 'xterm-256color:RGB'
+# Enable RGB colour (works at least in wezterm)
+# set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-# set-option -sa terminal-overrides ",alacritty*:RGB"
+set -s extended-keys on
+set-option -g focus-events on
+set -g allow-passthrough all
 
 # Change the prefix key to C-a
 set -g prefix C-a
@@ -25,9 +26,6 @@ set -g mouse on
 # set scroll history to 100,000 lines
 set-option -g history-limit 100000
 
-# modern colors
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",alacritty:RGB"
 
 # unbind the prefix and bind it to Ctrl-a like screen
 unbind C-b
