Created a tmux theme more fitting for my shell prompt theme
I finally changed positioning of windows (center) as well as adapted the
colors to the same ones I am really using ;). Furthermore I was inspired
by the round and triangle combined separator design of the prompt
configuration I use.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,6 +64,5 @@ bind c new-window -c "#{pane_current_path}"
 ## THEMES
 #############
 
-# AUTO CHANGE MARKER: LIGHT/DARK
-source-file ~/.tmux/gruvbox-dark-theme.conf
+source-file ~/.tmux/my-theme.conf
 
