Fixed backgrounds of outer round edges

--- a/.tmux/my-theme.conf
+++ b/.tmux/my-theme.conf
@@ -60,10 +60,10 @@ set-window-option -g window-status-activity-style bg=$BG,fg=$RED
 set-window-option -g window-status-bell-style bg=$RED,fg=$BG
 
 # Status bar left (session name)
-set-option -g status-left "#[bg=$BG,fg=$LIGHT_GRAY]${HALF_ROUND_OPEN}#[bg=$LIGHT_GRAY,fg=$YELLOW,bold]#S #[bg=$BG,fg=$LIGHT_GRAY]${TRIANGLE_CLOSE}"
+set-option -g status-left "#[bg=$BLACK,fg=$LIGHT_GRAY]${HALF_ROUND_OPEN}#[bg=$LIGHT_GRAY,fg=$YELLOW,bold]#S #[bg=$BG,fg=$LIGHT_GRAY]${TRIANGLE_CLOSE}"
 
 # Status bar right (hostname)
-set-option -g status-right "#[bg=$BG,fg=$LIGHT_GRAY]${TRIANGLE_OPEN}#[bg=$LIGHT_GRAY,fg=$CYAN,bold] #h#[bg=$BG,fg=$LIGHT_GRAY]${HALF_ROUND_CLOSE}"
+set-option -g status-right "#[bg=$BG,fg=$LIGHT_GRAY]${TRIANGLE_OPEN}#[bg=$LIGHT_GRAY,fg=$CYAN,bold] #h#[bg=$BLACK,fg=$LIGHT_GRAY]${HALF_ROUND_CLOSE}"
 
 # Window status format (for inactive windows)
 set-window-option -g window-status-format " #[fg=$FG,bg=$BG]#I#[bg=$BG,fg=$MAGENTA]:#[fg=$FG]#W "
