--- a/.tmux/my-theme.conf
+++ b/.tmux/my-theme.conf
@@ -54,16 +54,16 @@ set-option -g display-panes-active-colour $YELLOW
 set-option -g display-panes-colour $BLUE
 
 # Window status styling
-set-window-option -g window-status-style bg=$BG,fg=$FG
-set-window-option -g window-status-current-style bg=$YELLOW,fg=$BG
-set-window-option -g window-status-activity-style bg=$BG,fg=$RED
-set-window-option -g window-status-bell-style bg=$RED,fg=$BG
+# set-window-option -g window-status-style bg=$BG,fg=$FG
+# set-window-option -g window-status-current-style bg=$YELLOW,fg=$BG
+# set-window-option -g window-status-activity-style bg=$BG,fg=$RED
+# set-window-option -g window-status-bell-style bg=$RED,fg=$BG
 
 # Status bar left (session name)
-set-option -g status-left "#[bg=$BLACK,fg=$LIGHT_GRAY]${HALF_ROUND_OPEN}#[bg=$LIGHT_GRAY,fg=$YELLOW,bold]#S #[bg=$BG,fg=$LIGHT_GRAY]${TRIANGLE_CLOSE}"
+set-option -g status-left "#[bg=default,fg=$LIGHT_GRAY]${HALF_ROUND_OPEN}#[bg=$LIGHT_GRAY,fg=$YELLOW,bold]#S #[bg=$BG,fg=$LIGHT_GRAY]${TRIANGLE_CLOSE}"
 
 # Status bar right (hostname)
-set-option -g status-right "#[bg=$BG,fg=$LIGHT_GRAY]${TRIANGLE_OPEN}#[bg=$LIGHT_GRAY,fg=$CYAN,bold] #h#[bg=$BLACK,fg=$LIGHT_GRAY]${HALF_ROUND_CLOSE}"
+set-option -g status-right "#[bg=$BG,fg=$LIGHT_GRAY]${TRIANGLE_OPEN}#[bg=$LIGHT_GRAY,fg=$CYAN,bold] #h#[bg=default,fg=$LIGHT_GRAY]${HALF_ROUND_CLOSE}"
 
 # Window status format (for inactive windows)
 set-window-option -g window-status-format " #[fg=$FG,bg=$BG]#I#[bg=$BG,fg=$MAGENTA]:#[fg=$FG]#W "
