Add commented entries of all possible (checked out) ghostty shaders

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -63,3 +63,84 @@ copy-on-select=clipboard
 
 # Env on startup
 command = env ENABLE_TMUX_STARTUP=true $SHELL
+
+## Shaders
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/matrix-hallway.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/starfield-colors.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/starfield.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/bettercrt.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/dither.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/galaxy.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/in-game-crt.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/glow-rgbsplit-twitchy.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/negative.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/drunkard.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/fireworks.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/water.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/just-snow.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/cubes.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/glitchy.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/animated-gradient-shader.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/tft.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/mnoise.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/crt.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/retro-terminal.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/bloom.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/fireworks-rockets.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/gears-and-belts.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/smoke-and-ghost.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/spotlight.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/underwater.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/cineShader-Lava.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/sparks-from-fire.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/gradient-background.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/inside-the-matrix.glsl"
+# custom-shader="/Users/jakob/Development/github/hackr-sh/ghostty-shaders/sin-interference.glsl"
+# custom-shader="/Users/jakob/Development/github/12jihan/ghostty_shaders/flicker.glsl"
+# custom-shader="/Users/jakob/Development/github/12jihan/ghostty_shaders/crt.glsl"
+# custom-shader="/Users/jakob/Development/github/12jihan/ghostty_shaders/glow.glsl"
+# custom-shader="/Users/jakob/Development/github/12jihan/ghostty_shaders/crt_glitch.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/matrix-hallway.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/starfield-colors.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/starfield.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/bettercrt.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/dither.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/glow-rgbsplit-twitchy.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/negative.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/drunkard.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/fireworks.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/water.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/just-snow.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/glitchy.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/tft.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/crt.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/retro-terminal.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/matrix.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/fireworks-rockets.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/matrix_rain.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/gears-and-belts.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/smoke-and-ghost.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/sparks-from-fire.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/gradient-background.glsl"
+# custom-shader="/Users/jakob/Development/github/erniee/gshaders/inside-the-matrix.glsl"
+# custom-shader="/Users/jakob/Development/github/fearlessgeekmedia/Fearless-Geek-Shaders-for-Ghostty/computer-glitchy-4.glsl"
+# custom-shader="/Users/jakob/Development/github/fearlessgeekmedia/Fearless-Geek-Shaders-for-Ghostty/static.glsl"
+# custom-shader="/Users/jakob/Development/github/fearlessgeekmedia/Fearless-Geek-Shaders-for-Ghostty/scanbars.glsl"
+# custom-shader="/Users/jakob/Development/github/fearlessgeekmedia/Fearless-Geek-Shaders-for-Ghostty/computer-glitchy-2.glsl"
+# custom-shader="/Users/jakob/Development/github/fearlessgeekmedia/Fearless-Geek-Shaders-for-Ghostty/computer-glitchy-3.glsl"
+# custom-shader="/Users/jakob/Development/github/fearlessgeekmedia/Fearless-Geek-Shaders-for-Ghostty/computer-glitchy.glsl"
+# custom-shader="/Users/jakob/Development/github/fearlessgeekmedia/Fearless-Geek-Shaders-for-Ghostty/old-film.glsl"
+# custom-shader="/Users/jakob/Development/github/alex-sherwin/my-ghostty-shaders/matrix-hallway.glsl"
+# custom-shader="/Users/jakob/Development/github/alex-sherwin/my-ghostty-shaders/sparks-from-fire_shadertoy.glsl"
+# custom-shader="/Users/jakob/Development/github/alex-sherwin/my-ghostty-shaders/starfield.glsl"
+# custom-shader="/Users/jakob/Development/github/alex-sherwin/my-ghostty-shaders/dither.glsl"
+# custom-shader="/Users/jakob/Development/github/alex-sherwin/my-ghostty-shaders/glow-rgbsplit-twitchy.glsl"
+# custom-shader="/Users/jakob/Development/github/alex-sherwin/my-ghostty-shaders/sparks-from-fire_almost_upside_down.glsl"
+# custom-shader="/Users/jakob/Development/github/alex-sherwin/my-ghostty-shaders/matrix-hallway_working_original.glsl"
+# custom-shader="/Users/jakob/Development/github/alex-sherwin/my-ghostty-shaders/waves.glsl"
+# custom-shader="/Users/jakob/Development/github/alex-sherwin/my-ghostty-shaders/underwater.glsl"
+# custom-shader="/Users/jakob/Development/github/alex-sherwin/my-ghostty-shaders/base.glsl"
+# custom-shader="/Users/jakob/Development/github/alex-sherwin/my-ghostty-shaders/sparks-from-fire.glsl"
+# custom-shader="/Users/jakob/Development/github/alex-sherwin/my-ghostty-shaders/inside-the-matrix_orig.glsl"
+# custom-shader="/Users/jakob/Development/github/alex-sherwin/my-ghostty-shaders/inside-the-matrix.glsl"
+# custom-shader="/Users/jakob/Development/github/luiscarlospando/crt-shader-with-chromatic-aberration-glow-scanlines-dot-matrix/crt-shader-with-chromatic-aberration-glow-scanlines-dot-matrix.glsl"
