Add Prefix + i tmux command for claude-cli overlay

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,7 +58,9 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-
+# Overlays
+## Open Claude Code in current directory
+bind-key i display-popup -d '#{pane_current_path}' -xC -yC -w90% -h90% -E 'zsh -l -c "source ~/.zshrc.d/000_path.sh;claude"'
 
 #############
 ## THEMES
