--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,10 @@
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s extended-keys on
 set-option -g focus-events on
-set -g allow-passthrough all
+
+# Claude code seems to break mouse coordinate handling with v1.2.3 of ghostty at this point. Hopefully this at least fixes it for the time being
+set -g allow-passthrough off
+#set -g allow-passthrough all
 
 # Change the prefix key to C-a
 set -g prefix C-a
